# One_Bite

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
.claude/logs/: conversation-index.md  conversation-log.md
one_bite/: OneBiteEditor.cpp  OneBiteEditor.h  one_bite.jucer
